# healther-py

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README.org  docker-compose.yml  main.py  new_core_feature.md  plans.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  api.md  architecture.md  auth.md  docker.md  frontend-design.md  frontend-usage.md  operations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  api.js  auth.jsx  styles.css
src/healther/: app.py  config.py  db.py  models.py  notifications.py  schemas.py  security.py  workers.py
src/healther/api/: deps.py  routes.py
src/healther/services/: auth.py  watchers.py
src/healther_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py
